tests/error/comprehension_errors/borrow_leaked4.err
Error: Linearity violation (at $FILE:17:18)
   | 
15 | @guppy(module)
16 | def foo(qs: list[qubit] @owned) -> list[qubit]:
17 |     return [r for q in qs for r in bar(q)]
   |                   ^ Variable `q` with linear type `qubit` is leaked

Guppy compilation failed due to 1 previous error
